Changes for 1.4.3:

 - [ZBX-68] fixed iframe resize on refresh in Screens (Artem)
 - [ZBX-65] fixed sideeffect on massupdate items, 'application' entries are cleaned from all affected items" (Artem)
 - fixed setting trigger status to unknown on trigger update, now only if expression is changed (Artem)
 - fixed problem with Enabling/Disabling actions (Artem)
 - [ZBX-72] fixed occured error after graph refresh (Artem)
 - [ZBX-67] Under DM, Synchronizing binary data between nodes (Sasha)
 - [ZBX-71] added separation of "other" by node and host in "latest data" (Artem)
 - [ZBX-70] fixed even more compilation warnings (Alexei)
 - [ZBX-69] eliminated compilation warnings "_GNU_SOURCE redefined" (Alexei)
 - [DEV-19] Add support of IPv6 for windows agent (Sasha)
 - [DEV-23] Autodiscovery for IPv6 (Sasha)
 - [DEV-17] Add support of IPv6 to standard library (comms.c) (Sasha)
 - [DEV-21] extended size of IP fields to accept IPv6 style IPs (Alexei)
 - [DEV-21] added basic validation of IPv6 IP addresses in GUI (Alexei)
 - [DEV-20] support of --enable-ipv6 for configure.in (Alexei)
 - added synchronisation of last value and timestamp for DM (Alexei)
 - [ZBX-1] fixed wrong status of function "nodata" after server restart (Sasha)
 - [ZBX-33] fixed problem in table names in data.sql for PostgreSQL (Sasha)
 - [ZBX-32] fixed incorrect processing of IP ranges in ip_in_list (Sasha)
 - [ZBX-35] fixed processing of PROFILE related macros (Alexei)
 - support of macro {ITEM.LASTVALUE} for notifications and trigger names (Alexei)
 - fixed SQL statement in SLA processing. Thanks to Aron Ujvari. (Alexei)
 - updated Spanish translation. Thanks to Ignacio Martin. (Alexei) 
 - [ZBX-24] fixed Queue to show status of current node only (Alexei)
 - support of encoding of log files to displayed encoding (Alexei)
 - [ZBX-12] fixed calculations in ZABBIX availability report (Alexei)
 - [ZBX-11] fixed Free BSD 4.x 64 bit-related issues (Alexei)